{
  "version": 4,
  "terraform_version": "0.14.3",
  "serial": 13,
  "lineage": "e82e7d42-2fdd-4ef0-6833-2e00f9b6d64e",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_default_security_group",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:519152307385:security-group/sg-7af91873",
            "description": "default VPC security group",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-7af91873",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": true,
                "to_port": 0
              }
            ],
            "name": "default",
            "owner_id": "519152307385",
            "revoke_rules_on_delete": false,
            "tags": null,
            "vpc_id": "vpc-57e94c2a"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_default_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_default_subnet",
      "name": "default_az1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:519152307385:subnet/subnet-b88801de",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "172.31.0.0/20",
            "id": "subnet-b88801de",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "519152307385",
            "tags": {
              "Name": "Default subnet for us-east-1a"
            },
            "vpc_id": "vpc-57e94c2a"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_default_vpc",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:519152307385:vpc/vpc-57e94c2a",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "172.31.0.0/16",
            "default_network_acl_id": "acl-e149459c",
            "default_route_table_id": "rtb-19644467",
            "default_security_group_id": "sg-7af91873",
            "dhcp_options_id": "dopt-dce8afa6",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-57e94c2a",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-19644467",
            "owner_id": "519152307385",
            "tags": {
              "Name": "Default VPC"
            }
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "jenkins",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0c2fc02255044bf94",
            "arn": "arn:aws:ec2:us-east-1:519152307385:instance/i-0921a876235339102",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1b",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0921a876235339102",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "es-unir-keypair-26384",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-05562fb977172b521",
            "private_dns": "ip-172-31-86-201.ec2.internal",
            "private_ip": "172.31.86.201",
            "public_dns": "ec2-54-152-42-52.compute-1.amazonaws.com",
            "public_ip": "54.152.42.52",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-09751cc20d4379b62",
                "volume_size": 18,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "es-unir-ec2-jenkins-all-traffic-26384"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-406afe61",
            "tags": {
              "Name": "es-unir-ec2-production-jenkins-server-26384"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0b47e7c2ea56a574d"
            ]
          },
          "dependencies": [
            "aws_default_security_group.default",
            "aws_default_vpc.default",
            "aws_security_group.allow_all",
            "data.http.myip",
            "module.key_pair.aws_key_pair.this",
            "random_integer.server",
            "tls_private_key.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "allow_all",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:519152307385:security-group/sg-0b47e7c2ea56a574d",
            "description": "Allow all inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0b47e7c2ea56a574d",
            "ingress": [
              {
                "cidr_blocks": [
                  "18.215.248.187/32",
                  "217.113.241.188/32"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [
                  "sg-7af91873"
                ],
                "self": false,
                "to_port": 0
              }
            ],
            "name": "es-unir-ec2-jenkins-all-traffic-26384",
            "name_prefix": "",
            "owner_id": "519152307385",
            "revoke_rules_on_delete": false,
            "tags": {
              "Country": "es",
              "Environment": "production",
              "Name": "es-unir-ec2-production-jenkins-server-securityGroup",
              "Team": "unir"
            },
            "timeouts": null,
            "vpc_id": "vpc-57e94c2a"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_default_security_group.default",
            "aws_default_vpc.default",
            "data.http.myip",
            "random_integer.server"
          ]
        }
      ]
    }
  ]
}